--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
                 <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
             <nav class="nav">
@@ -41,15 +41,15 @@
                 </ul>
             </div>
         </div>
-    </header>
+    </header> -->
     <main>
          <!-- Герой -->
-        <section class="hero">
+        <!-- <section class="hero">
             <div class="container">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero__btn btn" data-modal-open>Заказать услугу</button>
             </div>
-        </section>
+        </section> -->
         <!-- Особенности -->
         <section class="features">
             <div class="container">
@@ -96,7 +96,7 @@
             </div>
         </section>
         <!-- Чем мы занимаемся -->
-        <section class="about">
+        <!-- <section class="about">
             <div class="container">
                 <h2 class="about__title">Чем мы занимаемся</h2>
                 <ul class="about__list list">
@@ -114,9 +114,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
          <!-- Наша команда -->
-         <section class="team">
+         <!-- <section class="team">
              <div class="container">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list list">
@@ -270,9 +270,9 @@
                     </li>
                 </ul>
             </div>
-         </section>
+         </section> -->
         <!-- Постоянные клиенты -->
-        <section class="clients">
+        <!-- <section class="clients">
             <div class="container">
                 <h2 class="clients__title">Постоянные клиенты</h2>
                 <ul class="clients__list list">
@@ -320,9 +320,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-container container">
             <div>
                 <a class="logo link"href="./index.html">Web<span class="footer-logo">Studio</span></a>
@@ -388,7 +388,7 @@
                 </label>
             </form>
         </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-modal btn" data-modal-close>
