--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </section>
         <!-- Чем мы занимаемся -->
-        <!-- <section class="about">
+        <!-- <!-- <section class="about"> -->
             <div class="container">
                 <h2 class="about__title">Чем мы занимаемся</h2>
                 <ul class="about__list list">
