--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
             </div>
         </section> -->
          <!-- Наша команда -->
-         <!-- <section class="team">
+           <section class="team">
              <div class="container">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list list">
                     <li class="team__item">
-                        <img class="team__img" src="images/worker1.jpg" alt="Наш сотрудник" width="270">
+                        <img class="team__img" src="images/worker1.jpg" alt="Наш сотрудник">
                         <div class="team__about">
                         <h3 class="team__name">Игорь Демьяненко</h3>
                         <p class="team__position">Product Designer</p>
@@ -158,7 +158,7 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img class="team__img" src="images/worker2.jpg" alt="Наш сотрудник" width="270">
+                        <img class="team__img" src="images/worker2.jpg" alt="Наш сотрудник">
                         <div class="team__about">
                         <h3 class="team__name">Ольга Репина</h3>
                         <p class="team__position">Frontend Developer</p>
@@ -195,7 +195,7 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img class="team__img" src="images/worker3.jpg" alt="Наш сотрудник" width="270">
+                        <img class="team__img" src="images/worker3.jpg" alt="Наш сотрудник">
                         <div class="team__about">
                         <h3 class="team__name">Николай Тарасов</h3>
                         <p class="team__position">Marketing</p>
@@ -232,7 +232,7 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img class="team__img" src="images/worker4.jpg" alt="Наш сотрудник" width="270">
+                        <img class="team__img" src="images/worker4.jpg" alt="Наш сотрудник">
                         <div class="team__about">
                         <h3 class="team__name">Михаил Ермаков</h3>
                         <p class="team__position">UI Designer</p>
