--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
          </section> -->
         <!-- Постоянные клиенты -->
-        <!-- <section class="clients">
+        <section class="clients">
             <div class="container">
                 <h2 class="clients__title">Постоянные клиенты</h2>
                 <ul class="clients__list list">
@@ -320,7 +320,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="footer">
         <div class="footer-container container">
