--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </header> -->
     <main>
          <!-- Герой -->
-        <!-- <section class="hero">
-            <div class="container">
+        <section class="hero">
+            <div class="hero__container">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero__btn btn" data-modal-open>Заказать услугу</button>
             </div>
-        </section> -->
+        </section>
         <!-- Особенности -->
         <section class="features">
             <div class="container">
@@ -114,7 +114,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
          <!-- Наша команда -->
            <section class="team">
              <div class="container">
@@ -270,7 +270,7 @@
                     </li>
                 </ul>
             </div>
-         </section> -->
+         </section>
         <!-- Постоянные клиенты -->
         <section class="clients">
             <div class="container">
