--- a/index.html
+++ b/index.html
@@ -115,16 +115,53 @@
                 </ul>
             </div>
         </section>
-         <!-- Наша команда -->
-           <section class="team">
-             <div class="container">
-                <h2 class="team__title">Наша команда</h2>
-                <ul class="team__list list">
-                    <li class="team__item">
-                        <img class="team__img" src="images/worker1.jpg" alt="Наш сотрудник">
-                        <div class="team__about">
-                        <h3 class="team__name">Игорь Демьяненко</h3>
-                        <p class="team__position">Product Designer</p>
+        <!-- Наша команда -->
+        <section class="team">
+            <div class="container">
+            <h2 class="team__title">Наша команда</h2>
+            <ul class="team__list list">
+                <li class="team__item">
+                    <img class="team__img" src="images/worker1.jpg" alt="Наш сотрудник">
+                    <div class="team__about">
+                    <h3 class="team__name">Игорь Демьяненко</h3>
+                    <p class="team__position">Product Designer</p>
+                    <ul class="team__soc-list list">
+                        <li class="team__soc-item item">
+                            <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team__soc-item item">
+                            <a href="https://twitter.com" class="team__soc-link link" target="_blank">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team__soc-item item">
+                            <a href="https://uk-ua.facebook.com/" class="team__soc-link link" target="_blank">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team__soc-item item">
+                            <a href="https://www.linkedin.com/" class="team__soc-link link" target="_blank">
+                                <svg width="20" height="20">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
+                </li>
+                <li class="team__item">
+                    <img class="team__img" src="images/worker2.jpg" alt="Наш сотрудник">
+                    <div class="team__about">
+                    <h3 class="team__name">Ольга Репина</h3>
+                    <p class="team__position">Frontend Developer</p>
                         <ul class="team__soc-list list">
                             <li class="team__soc-item item">
                                 <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
@@ -134,14 +171,14 @@
                                 </a>
                             </li>
                             <li class="team__soc-item item">
-                                <a href="https://twitter.com" class="team__soc-link link" target="_blank">
+                                <a href="https://twitter.com/?lang=ru" class="team__soc-link link" target="_blank">
                                     <svg width="20" height="20">
                                         <use href="./images/icons.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team__soc-item item">
-                                <a href="https://uk-ua.facebook.com/" class="team__soc-link link" target="_blank">
+                                <a href="https://www.facebook.com/" class="team__soc-link link" target="_blank">
                                     <svg width="20" height="20">
                                         <use href="./images/icons.svg#facebook"></use>
                                     </svg>
@@ -155,122 +192,85 @@
                                 </a>
                             </li>
                         </ul>
-                        </div>
-                    </li>
-                    <li class="team__item">
-                        <img class="team__img" src="images/worker2.jpg" alt="Наш сотрудник">
-                        <div class="team__about">
-                        <h3 class="team__name">Ольга Репина</h3>
-                        <p class="team__position">Frontend Developer</p>
-                            <ul class="team__soc-list list">
-                                <li class="team__soc-item item">
-                                    <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://twitter.com/?lang=ru" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://www.facebook.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://www.linkedin.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="team__item">
-                        <img class="team__img" src="images/worker3.jpg" alt="Наш сотрудник">
-                        <div class="team__about">
-                        <h3 class="team__name">Николай Тарасов</h3>
-                        <p class="team__position">Marketing</p>
-                            <ul class="team__soc-list list">
-                                <li class="team__soc-item item">
-                                    <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://twitter.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://www.facebook.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://www.linkedin.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="team__item">
-                        <img class="team__img" src="images/worker4.jpg" alt="Наш сотрудник">
-                        <div class="team__about">
-                        <h3 class="team__name">Михаил Ермаков</h3>
-                        <p class="team__position">UI Designer</p>
-                            <ul class="team__soc-list list">
-                                <li class="team__soc-item item">
-                                    <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://twitter.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://www.facebook.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team__soc-item item">
-                                    <a href="https://www.linkedin.com/" class="team__soc-link link" target="_blank">
-                                        <svg width="20" height="20">
-                                            <use href="./images/icons.svg#linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-         </section>
+                    </div>
+                </li>
+                <li class="team__item">
+                    <img class="team__img" src="images/worker3.jpg" alt="Наш сотрудник">
+                    <div class="team__about">
+                    <h3 class="team__name">Николай Тарасов</h3>
+                    <p class="team__position">Marketing</p>
+                        <ul class="team__soc-list list">
+                            <li class="team__soc-item item">
+                                <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team__soc-item item">
+                                <a href="https://twitter.com/" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team__soc-item item">
+                                <a href="https://www.facebook.com/" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team__soc-item item">
+                                <a href="https://www.linkedin.com/" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="team__item">
+                    <img class="team__img" src="images/worker4.jpg" alt="Наш сотрудник">
+                    <div class="team__about">
+                    <h3 class="team__name">Михаил Ермаков</h3>
+                    <p class="team__position">UI Designer</p>
+                        <ul class="team__soc-list list">
+                            <li class="team__soc-item item">
+                                <a href="https://www.instagram.com" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team__soc-item item">
+                                <a href="https://twitter.com/" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team__soc-item item">
+                                <a href="https://www.facebook.com/" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="team__soc-item item">
+                                <a href="https://www.linkedin.com/" class="team__soc-link link" target="_blank">
+                                    <svg width="20" height="20">
+                                        <use href="./images/icons.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        </section>
         <!-- Постоянные клиенты -->
         <section class="clients">
             <div class="container">
@@ -322,10 +322,10 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="footer-container container">
             <div>
-                <a class="logo link"href="./index.html">Web<span class="footer-logo">Studio</span></a>
+                <a class="logo logo-footer link"href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <address class="adress">
                     <ul class="adress__list list">
                         <li class="adress__item">
@@ -388,7 +388,7 @@
                 </label>
             </form>
         </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-modal btn" data-modal-close>
