--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
     <body>
-        <!-- <header class="header portfolio--border">
+        <header class="header portfolio--border">
             <div class="container">
                 <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
                 <nav class="nav">
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
             </div>
-        </header> -->
+        </header>
         <main>
         <section class="portfolio">
             <div class="container">
@@ -374,7 +374,7 @@
             </div>
         </section>
         </main>
-        <!-- <footer class="footer">
+        <footer class="footer">
         <div class="footer-container container">
             <div>
                 <a class="logo link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
@@ -441,6 +441,6 @@
                 </label>
             </form>
         </div>
-        </footer> -->
+        </footer>
     </body>
 </html>
