--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
                 <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
             <nav class="nav">
@@ -41,7 +41,7 @@
                 </ul>
             </div>
         </div>
-    </header> -->
+    </header>
     <main>
          <!-- Герой -->
         <section class="hero">
