--- a/index.html
+++ b/index.html
@@ -40,10 +40,46 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </header>
+            <button class="mob-menu__open btn" type="button">
+                <svg class="mob-menu__icon" width="40" height="40">
+                    <use href="./images/icons.svg#mob-menu"></use>
+                </svg>
+            </button>
+            <div class="mob-menu is-hidden">
+                <div class="mob-menu__top">
+                    <button class="mob-menu__close btn" type="button">
+                        <svg class="mob-menu__icon-close" width="40" height="40" >
+                            <use href="./images/icons.svg#mob-close"></use>
+                        </svg>
+                    </button>
+                    <nav class="mob-menu__nav">
+                        <ul class="mob-menu__nav-list list">
+                            <li class="mob-menu__nav-item"><a href="./index.html" class="mob-menu__nav-link link current">Студия</a></li>
+                            <li class="mob-menu__nav-item"><a href="./portfolio.html" class="mob-menu__nav-link link">Портфолио</a></li>
+                            <li class="mob-menu__nav-item"><a href="./" class="mob-menu__nav-link link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="mob-menu__bot">
+                    <ul class="mob-menu__contact-list list">
+                        <li class="mob-menu__contacts-item">
+                            <a href="mailto:info@devstudio.com" class="mob-menu__contacts-link link">info@devstudio.com</a>
+                        </li>
+                        <li class="header-contacts__item">
+                            <a href="tel:+380961111111" class="mob-menu__contacts-link link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                    <ul class="mob-menu__soc-list list">
+                        <li class="mob-menu__soc-item"><a href="" class="mob-menu__soc-link link">Instagram</a></li>
+                        <li class="mob-menu__soc-item"><a href="" class="mob-menu__soc-link link">Twitter</a></li>
+                        <li class="mob-menu__soc-item"><a href="" class="mob-menu__soc-link link">Facebook</a></li>
+                        <li class="mob-menu__soc-item"><a href="" class="mob-menu__soc-link link">Linkedin</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
     <main>
-         <!-- Герой -->
+                                <!-- Герой -->
         <section class="hero">
             <div class="hero__container">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
@@ -433,5 +469,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mob-menu.js"></script>
 </body>
 </html>
