--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                         <h3 class="features__title">Современные технологии</h3>
                         <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
-
                 </ul>
             </div>
         </section>
@@ -157,8 +156,33 @@
             <h2 class="team__title">Наша команда</h2>
             <ul class="team__list list">
                 <li class="team__item">
-                    <img class="team__img" src="images/worker1.jpg" alt="Наш сотрудник">
-                    <div class="team__about">
+                    <picture>
+                        <source
+                        srcset="
+                        ./images/team/t1des-1x.jpg,
+                        ./images/team/t1des-2x.jpg 2x
+                        " 
+                        media="(min-width: 1200px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t1tab-1x.jpg 1x,
+                        ./images/team/t1tab-2x.jpg 2x
+                        " 
+                        media="(min-width: 768px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t1mob-1x.jpg 1x,
+                        ./images/team/t1mob-2x.jpg 2x
+                        " 
+                        media="(min-width: 320px)"
+                        />
+                        <img src="images/team/t1mob-1x.jpg"
+                            alt="Член команды" 
+                            class="img">
+                    </picture>
+        <div class="team__about">
                     <h3 class="team__name">Игорь Демьяненко</h3>
                     <p class="team__position">Product Designer</p>
                     <ul class="team__soc-list list">
@@ -194,7 +218,32 @@
                     </div>
                 </li>
                 <li class="team__item">
-                    <img class="team__img" src="images/worker2.jpg" alt="Наш сотрудник">
+                    <picture>
+                        <source
+                        srcset="
+                        ./images/team/t2des-1x.jpg,
+                        ./images/team/t2des-2x.jpg 2x
+                        " 
+                        media="(min-width: 1200px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t2tab-1x.jpg 1x,
+                        ./images/team/t2tab-2x.jpg 2x
+                        " 
+                        media="(min-width: 768px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t2mob-1x.jpg 1x,
+                        ./images/team/t2mob-2x.jpg 2x
+                        " 
+                        media="(min-width: 320px)"
+                        />
+                        <img src="images/team/t2mob-1x.jpg"
+                            alt="Член команды" 
+                            class="img">
+                    </picture>
                     <div class="team__about">
                     <h3 class="team__name">Ольга Репина</h3>
                     <p class="team__position">Frontend Developer</p>
@@ -231,7 +280,32 @@
                     </div>
                 </li>
                 <li class="team__item">
-                    <img class="team__img" src="images/worker3.jpg" alt="Наш сотрудник">
+                    <picture>
+                        <source
+                        srcset="
+                        ./images/team/t3des-1x.jpg,
+                        ./images/team/t3des-2x.jpg 2x
+                        " 
+                        media="(min-width: 1200px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t3tab-1x.jpg 1x,
+                        ./images/team/t3tab-2x.jpg 2x
+                        " 
+                        media="(min-width: 768px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t3mob-1x.jpg 1x,
+                        ./images/team/t3mob-2x.jpg 2x
+                        " 
+                        media="(min-width: 320px)"
+                        />
+                        <img src="images/team/t3mob-1x.jpg"
+                            alt="Член команды" 
+                            class="img">
+                    </picture>
                     <div class="team__about">
                     <h3 class="team__name">Николай Тарасов</h3>
                     <p class="team__position">Marketing</p>
@@ -268,7 +342,32 @@
                     </div>
                 </li>
                 <li class="team__item">
-                    <img class="team__img" src="images/worker4.jpg" alt="Наш сотрудник">
+                    <picture>
+                        <source
+                        srcset="
+                        ./images/team/t4des-1x.jpg,
+                        ./images/team/t4des-2x.jpg 2x
+                        " 
+                        media="(min-width: 1200px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t4tab-1x.jpg 1x,
+                        ./images/team/t4tab-2x.jpg 2x
+                        " 
+                        media="(min-width: 768px)"
+                        />
+                        <source
+                        srcset="
+                        ./images/team/t4mob-1x.jpg 1x,
+                        ./images/team/t4mob-2x.jpg 2x
+                        " 
+                        media="(min-width: 320px)"
+                        />
+                        <img src="images/team/t4mob-1x.jpg"
+                            alt="Член команды" 
+                            class="img">
+                    </picture>
                     <div class="team__about">
                     <h3 class="team__name">Михаил Ермаков</h3>
                     <p class="team__position">UI Designer</p>
