--- a/index.html
+++ b/index.html
@@ -136,15 +136,45 @@
                 <h2 class="about__title">Чем мы занимаемся</h2>
                 <ul class="about__list list">
                     <li class="about__item"> 
-                        <img src="images/example1.jpg" alt="Примеры работ" width="370">
-                        <div class="about__text">Десктопные приложения</div>
+                        <picture>
+                            <source
+                            srcset="
+                            ./images/about/about-des-1-1x.jpg 1x,
+                            ./images/about/about-des-1-2x.jpg 2x
+                            " 
+                            />
+                            <img src="./images/about/about-des-1-1x.jpg"
+                                alt="Член команды" 
+                                class="img">
+                        </picture>
+                            <div class="about__text">Десктопные приложения</div>
                     </li>
                     <li class="about__item"> 
-                        <img src="images/example2.jpg" alt="Примеры работ" width="370">
+                        <picture>
+                            <source
+                            srcset="
+                            ./images/about/about-des-2-1x.jpg 1x,
+                            ./images/about/about-des-2-2x.jpg 2x
+                            " 
+                            />
+                            <img src="./images/about/about-des-2-1x.jpg"
+                                alt="Член команды" 
+                                class="img">
+                        </picture>
                         <div class="about__text">Мобильные приложения</div>
                     </li>
                     <li class="about__item">
-                        <img src="images/example3.jpg" alt="Примеры работ" width="370">
+                        <picture>
+                            <source
+                            srcset="
+                            ./images/about/about-des-3-1x.jpg 1x,
+                            ./images/about/about-des-3-2x.jpg 2x
+                            " 
+                            />
+                            <img src="./images/about/about-des-3-1x.jpg"
+                                alt="Член команды" 
+                                class="img">
+                        </picture>
                         <div class="about__text">Дизайнерские решения</div>
                     </li>
                 </ul>
@@ -159,7 +189,7 @@
                     <picture>
                         <source
                         srcset="
-                        ./images/team/t1des-1x.jpg,
+                        ./images/team/t1des-1x.jpg 1x,
                         ./images/team/t1des-2x.jpg 2x
                         " 
                         media="(min-width: 1200px)"
@@ -221,7 +251,7 @@
                     <picture>
                         <source
                         srcset="
-                        ./images/team/t2des-1x.jpg,
+                        ./images/team/t2des-1x.jpg 1x,
                         ./images/team/t2des-2x.jpg 2x
                         " 
                         media="(min-width: 1200px)"
@@ -283,7 +313,7 @@
                     <picture>
                         <source
                         srcset="
-                        ./images/team/t3des-1x.jpg,
+                        ./images/team/t3des-1x.jpg 1x,
                         ./images/team/t3des-2x.jpg 2x
                         " 
                         media="(min-width: 1200px)"
@@ -345,7 +375,7 @@
                     <picture>
                         <source
                         srcset="
-                        ./images/team/t4des-1x.jpg,
+                        ./images/team/t4des-1x.jpg 1x,
                         ./images/team/t4des-2x.jpg 2x
                         " 
                         media="(min-width: 1200px)"
