--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
                     <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
                 <nav class="nav">
                     <ul class="nav__list list">
-                        <li class="nav__item"><a href="./index.html" class="nav__link link current">Студия</a></li>
-                        <li class="nav__item"><a href="./portfolio.html" class="nav__link link">Портфолио</a></li>
+                        <li class="nav__item"><a href="./index.html" class="nav__link link">Студия</a></li>
+                        <li class="nav__item"><a href="./portfolio.html" class="nav__link link current">Портфолио</a></li>
                         <li class="nav__item"><a href="./" class="nav__link link">Контакты</a></li>
                     </ul>
                 </nav>
