--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <body>
         <header class="header">
             <div class="container">
-                    <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
+                    <a href="./index.html" class="logo logo-header link">Web<span class="header-logo">Studio</span></a>
                 <nav class="nav">
                     <ul class="nav__list list">
                         <li class="nav__item"><a href="./index.html" class="nav__link link">Студия</a></li>
@@ -413,7 +413,7 @@
         <footer class="footer">
         <div class="footer-container container">
             <div>
-                <a class="logo link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+                <a class="logo logo-footer link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <address class="adress">
                     <ul class="adress__list list">
                         <li class="adress__item">
