--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
     <body>
-        <header class="header">
+        <header class="header portfolio-border">
             <div class="container">
                     <a href="./index.html" class="logo logo-header link">Web<span class="header-logo">Studio</span></a>
                 <nav class="nav">
