--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </button>
                     <nav class="mob-menu__nav">
                         <ul class="mob-menu__nav-list list">
-                            <li class="mob-menu__nav-item"><a href="./index.html" class="mob-menu__nav-link link current">Студия</a></li>
+                            <li class="mob-menu__nav-item"><a href="./index.html" class="mob-menu__nav-link link">Студия</a></li>
                             <li class="mob-menu__nav-item"><a href="./portfolio.html" class="mob-menu__nav-link link">Портфолио</a></li>
                             <li class="mob-menu__nav-item"><a href="./" class="mob-menu__nav-link link">Контакты</a></li>
                         </ul>
@@ -63,10 +63,10 @@
                 <div class="mob-menu__bot">
                     <ul class="mob-menu__contact-list list">
                         <li class="mob-menu__contacts-item">
-                            <a href="mailto:info@devstudio.com" class="mob-menu__contacts-link link">info@devstudio.com</a>
+                            <a href="tel:+380961111111" class="mob-menu__contacts-link link">+38 096 111 11 11</a>
                         </li>
                         <li class="header-contacts__item">
-                            <a href="tel:+380961111111" class="mob-menu__contacts-link link">+38 096 111 11 11</a>
+                            <a href="mailto:info@devstudio.com" class="mob-menu__contacts-link link">info@devstudio.com</a>
                         </li>
                     </ul>
                     <ul class="mob-menu__soc-list list">
